2014-09-02  Eli Zaretskii  <eliz@gnu.org>

	* subr.el (posn-col-row): Revert the change from commit
	2010-11-13T21:07:58Z!eliz@gnu.org, which
	was inadvertently merged from emacs-23 release branch in 2010-11-18T03:54:14Z!monnier@iro.umontreal.ca
	monnier@iro.umontreal.ca-20101118035414-yvlg7k7dk4k4l3q, and
	introduced an off-by-one error in the reported row when there is a
	header line.  (Bug#18384)

2014-09-01  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* progmodes/python.el (python-indent-post-self-insert-function):
	Avoid electric colon at beginning-of-defun.  (Bug#18228)

2014-09-01  Glenn Morris  <rgm@gnu.org>

	* tutorial.el (tutorial--display-changes):
	Fix 2014-07-29 change.  (Bug#18382)

2014-08-29  Ken Brown  <kbrown@cornell.edu>

	* startup.el (fancy-splash-frame): Extend the fix for Bug#16014 to
	the Cygwin-w32 build.  (Bug#18347)

2014-08-28  Glenn Morris  <rgm@gnu.org>

	* tar-mode.el (tar--extract, tar-extract):
	Avoid permanently disabling undo in extracted buffers.  (Bug#18344)

2014-08-27  Michael Albinus  <michael.albinus@gmx.de>

	* emacs-lisp/authors.el (authors-aliases): Addition.

	* net/tramp-adb.el: Spell author name correctly.

2014-08-27  João Távora  <joaotavora@gmail.com>

	* net/shr.el (shr-expand-url): Plain expand-file-name is not enough;
	use url-expand-file-name.  (Bug#18310)

2014-08-25  Glenn Morris  <rgm@gnu.org>

	* emulation/cua-rect.el (cua--highlight-rectangle):
	Avoid error at point-min.  (Bug#18309)

2014-08-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/python.el (python-shell-prompt-detect): Remove redundant
	executable-find (bug#18244).

	* simple.el (self-insert-uses-region-functions): Defvar.

2014-08-13  Leo Liu  <sdl.web@gmail.com>

	* speedbar.el (speedbar-generic-list-tag-p): Allow special
	elements from imenu.

2014-08-11  Glenn Morris  <rgm@gnu.org>

	* subr.el (with-output-to-temp-buffer): Doc fix; from elisp manual.

	* files.el (basic-save-buffer-2): Revert 2013-01-31 change, which