@@ -1,3 +1,8 @@
+2014-09-02  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* progmodes/gud.el (gud-gdb-completion-at-point): Add hack (bug#18282).
+	(gud-gdb-completions): Remove obsolete workaround.
+
 2014-09-02  Eli Zaretskii  <eliz@gnu.org>
 
 	* subr.el (posn-col-row): Revert the change from commit
